--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "react-router-hash-link": "^1.2.2",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
+    "semantic-ui-react": "^0.88.1",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
