--- a/package.json
+++ b/package.json
@@ -73,7 +73,11 @@
         "webpack": "4.41.0",
         "webpack-dev-server": "3.2.1",
         "webpack-manifest-plugin": "2.1.1",
-        "workbox-webpack-plugin": "4.3.1"
+        "workbox-webpack-plugin": "4.3.1",
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "gh-pages": "^2.1.1",
+        "node-sass-chokidar": "^1.3.5",
+        "npm-run-all": "^4.1.5"
     },
     "scripts": {
         "start-js": "node scripts/start.js",
