--- a/package.json
+++ b/package.json
@@ -64,20 +64,18 @@
         "resolve": "1.12.0",
         "resolve-url-loader": "3.1.0",
         "sass-loader": "7.2.0",
+        "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.88.1",
         "semver": "6.3.0",
         "style-loader": "1.0.0",
+        "swiper": "^5.1.0",
         "terser-webpack-plugin": "1.4.1",
         "ts-pnp": "1.1.4",
         "url-loader": "2.1.0",
         "webpack": "4.41.0",
         "webpack-dev-server": "3.2.1",
         "webpack-manifest-plugin": "2.1.1",
-        "workbox-webpack-plugin": "4.3.1",
-        "@fortawesome/fontawesome-free": "^5.11.2",
-        "gh-pages": "^2.1.1",
-        "node-sass-chokidar": "^1.3.5",
-        "npm-run-all": "^4.1.5"
+        "workbox-webpack-plugin": "4.3.1"
     },
     "scripts": {
         "start-js": "node scripts/start.js",
