--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "@babel/core": "7.6.0",
+        "@fortawesome/fontawesome-free": "^5.11.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.25",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
         "@fortawesome/react-fontawesome": "^0.1.7",
@@ -33,6 +34,7 @@
         "eslint-plugin-react-hooks": "^1.6.1",
         "file-loader": "3.0.1",
         "fs-extra": "7.0.1",
+        "gh-pages": "^2.1.1",
         "html-webpack-plugin": "4.0.0-beta.5",
         "identity-obj-proxy": "3.0.0",
         "is-wsl": "^1.1.0",
@@ -41,6 +43,8 @@
         "jest-resolve": "24.9.0",
         "jest-watch-typeahead": "0.4.0",
         "mini-css-extract-plugin": "0.8.0",
+        "node-sass-chokidar": "^1.3.5",
+        "npm-run-all": "^4.1.5",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.5.0",
         "postcss-flexbugs-fixes": "4.1.0",
@@ -75,11 +79,7 @@
         "webpack": "4.41.0",
         "webpack-dev-server": "3.2.1",
         "webpack-manifest-plugin": "2.1.1",
-        "workbox-webpack-plugin": "4.3.1",
-        "@fortawesome/fontawesome-free": "^5.11.2",
-        "gh-pages": "^2.1.1",
-        "node-sass-chokidar": "^1.3.5",
-        "npm-run-all": "^4.1.5"
+        "workbox-webpack-plugin": "4.3.1"
     },
     "scripts": {
         "start-js": "node scripts/start.js",
