--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
         "webpack": "4.41.0",
         "webpack-dev-server": "3.2.1",
         "webpack-manifest-plugin": "2.1.1",
-        "workbox-webpack-plugin": "4.3.1"
+        "workbox-webpack-plugin": "4.3.1",
+        "wowjs": "^1.1.3"
     },
     "scripts": {
         "start-js": "node scripts/start.js",
