homepage change package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://kevinkaos.github.io/movie-finder",
+    "homepage": "https://mysterious-waters-03721.herokuapp.com",
     "name": "api-practice",
     "version": "0.1.0",
     "private": true,
