--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://mysterious-waters-03721.herokuapp.com",
+    "homepage": "http://kkaotech.com",
     "name": "api-practice",
     "version": "0.1.0",
     "private": true,
