--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-responsive-carousel": "^3.1.50",
         "react-router-dom": "^5.1.2",
         "react-router-hash-link": "^1.2.2",
+        "react-show-more-text": "^1.2.3",
         "reactstrap": "^8.1.1",
         "redux": "^4.0.4",
         "redux-persist": "^6.0.0",
