--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "homepage": "http://kkaotech.com",
-    "name": "api-practice",
+    "homepage": ".",
+    "name": "movie-finder",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -17,6 +17,7 @@
         "babel-jest": "^24.9.0",
         "babel-loader": "8.0.6",
         "babel-plugin-named-asset-import": "^0.3.4",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-react-app": "^9.0.2",
         "bootstrap": "^4.3.1",
         "camelcase": "^5.2.0",
@@ -112,7 +113,9 @@
         "@fortawesome/fontawesome-free": "^5.11.2",
         "gh-pages": "^2.1.1",
         "node-sass-chokidar": "^1.3.5",
-        "npm-run-all": "^4.1.5"
+        "npm-run-all": "^4.1.5",
+        "redux-devtools-extension": "^2.13.8",
+        "webpack-merge": "^4.2.2"
     },
     "jest": {
         "roots": [
